maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^JediEscaper:8: error: class Array takes type parameters
def DetectBiscuit():Array ={
                    ^